# wgpu

./: .deny.toml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  renovate.json
.config/: nextest.toml
.github/workflows/: ci.yml  cts.yml  docs.yml  generate.yml  lazy.yml  publish.yml  shaders.yml
benches/: Cargo.toml
benches/benches/wgpu-benchmark/: bind_groups.rs  shader.rs
cts_runner/: Cargo.toml  revision.txt  test.lst
cts_runner/src/: bootstrap.js  main.rs
cts_runner/tests/: integration.rs
deno_webgpu/: command_encoder.rs  device.rs  error.rs  lib.rs  render_bundle.rs
docs/: release-checklist.md
docs/api-specs/: mesh_shading.md  ray_tracing.md
examples/: README.md
examples/features/src/: framework.rs  lib.rs  main.rs  utils.rs
examples/standalone/01_hello_compute/: Cargo.toml
examples/standalone/02_hello_window/: Cargo.toml
examples/standalone/custom_backend/: Cargo.toml
examples/standalone/custom_backend/src/: custom.rs
naga/src/compact/: mod.rs
naga/src/front/: type_gen.rs
player/src/: lib.rs
tests/: Cargo.toml
tests/src/: expectations.rs  image.rs  init.rs  lib.rs  native.rs  params.rs  report.rs
wgpu-core/: Cargo.toml
wgpu-core/src/: as_hal.rs  binding_model.rs  hub.rs  id.rs  instance.rs  lib.rs  pipeline.rs  present.rs  registry.rs  resource.rs  snatch.rs  validation.rs
wgpu-hal/src/: lib.rs
wgpu-info/src/: human.rs
wgpu-types/src/: error.rs  features.rs  instance.rs  lib.rs
wgpu/src/: dispatch.rs  lib.rs  macros.rs
xtask/: Cargo.toml
xtask/src/: cts.rs  main.rs  miri.rs  util.rs  vendor_web_sys.rs
(+207 files in other folders)
